...
  String get roleAdmin => 'Administrateur';

  @override
  String get roleAgent => 'Agent';

  @override
  String get home => 'Accueil';

  @override
  String get userAccounts => 'Comptes utilisateurs';

  @override
  String get regionalDirections => 'Directions régionales';
...
  String get errorMessageLabel => 'Message d\'erreur';

  @override
  String get loginButtonLabel => 'Bouton se connecter';

  @override
  String get signIn => 'Se connecter';

  @override
  String get registerQuestion => 'S\'inscrire ?';

  @override
  String get forgotPassword => 'Mot de passe oublié ?';
...
  String get noAccountCreate => 'Pas encore de compte ? Créer un compte';

  @override
  String get dgiName => 'Direction Générale des Impôts du Burkina Faso';

  @override
  String get roomsManagementTitle => 'Gestion des Salles de Réunion';

  @override
  String get roomsAndReservationsTitle =>
      'Gestion des Salles de Réunion et des Réservations';

  @override
...

  @override
  String get deleteCategory => 'Supprimer la catégorie';

  @override
  String get categoriesManagementTitle =>
      'Gestion des catégories de salles de réunion';

  @override
  String get tabFree => 'Gratuites';

  @override
  String get tabRental => 'Location';
...
  String get dashAvailableRooms => 'Salles disponibles';

  @override
  String get dashValidationRate => 'Taux de validation';

  @override
  String get dashRoomsByStatus => 'Salles par statut';

  @override
  String get dashReservationsByStatus => 'Réservations par statut';

  @override
  String get mostRequestedRooms => 'Salles les plus demandées';
...
  String get reject => 'Rejeter';

  @override
  String get validate => 'Valider';

  @override
  String get reservationRequests => 'Demandes de Réservation';

  @override
  String get iconPending => 'Icône en attente';

  @override
  String get iconValidated => 'Icône validées';
...
  String get computerCount => 'Nombre d\'ordinateurs';

  @override
  String get equippedComputers => 'Équipée en ordinateurs';

  @override
  String get statsTitle => 'Statistiques & Analytique GsrApp';

  @override
  String get reservationRequestsTitle => 'Demandes de réservation';

  @override
  String get successRate => 'Taux de succès';
...
  String get connTitle => 'État de la connexion MySQL (dbgsr)';

  @override
  String get retest => 'Tester à nouveau';

  @override
  String get appVersion => 'Version de l\'application';

  @override
  String get aboutDescription =>
      'Gestion des salles de réunion et des réservations.';

  @override
...
